--- a/templates/components/guestLayout.html
+++ b/templates/components/guestLayout.html
@@ -19,7 +19,7 @@
     </div>
     
     <!-- Footer -->
-    <footer class="text-center p-4 bg-gray-100 text-sky-600 z-40">
+    <footer class="text-center p-4 bg-gray-100 text-zinc-600 z-40">
         &copy; 2024 Visitors E-Log System
     </footer>
 </body>
