--- a/templates/landingPage.html
+++ b/templates/landingPage.html
@@ -10,19 +10,19 @@
       aria-hidden="true">
     <div class="mt-[-50px] flex h-screen items-center justify-center">
       <div class="max-w-full flex-shrink-0  text-center lg:mx-0 lg:max-w-3xl lg:pt-8">
-        <h1 class="mt-10 text-sky-700 text-5xl font-bold tracking-tight sm:text-5xl">
+        <h1 class="mt-10 text-zinc-700 text-5xl font-bold tracking-tight sm:text-5xl">
             Simplify Visitor Loging Process 
         </h1>
         <p class="mt-6 text-lg leading-8 text-gray-500">Efficiently managing visits, one log at a time!</p>
         <div class="mt-5 flex items-center justify-center gap-x-6">
             <!-- E-Log Button -->
             <a href="{% url 'visitor.index' %}"
-                class="rounded-md bg-sky-500 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-sky-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-sky-400"
+                class="rounded-md bg-zinc-500 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-zinc-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-zinc-400"
                 rel="noreferrer">Click E-Log →</a>
         
             <!-- Log Out Button -->
-            <a href="{% url 'register' %}"
-                class="rounded-md bg-sky-800 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-sky-600 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-sky-400"
+            <a href="{% url 'visitor_out' %}"
+                class="rounded-md bg-zinc-800 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-zinc-600 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-zinc-400"
                 rel="noreferrer">Click To Log Out →</a>
         </div>
         
