--- a/templates/components/nav.html
+++ b/templates/components/nav.html
@@ -26,12 +26,12 @@
             <div class="relative flex h-16 justify-between">
                 <div class="flex flex-1 items-stretch justify-start">
                     <a class="flex flex-shrink-0 items-center" href="{% url 'landingPage'%}">
-                        <h1 class="text-xl font-bold tracking-tight text-sky-700">Visitors E-Log System</h1>
+                        <h1 class="text-xl font-bold tracking-tight text-zinc-700">Visitors E-Log System</h1>
                     </a>
                 </div>
                 <div class="flex-shrink-0 flex px-2 py-3 items-center space-x-8">
-                    <a href="#" class="text-sky-700 hover:text-sky-700 text-sm font-medium">Home</a>
-                    <a class="text-sky-800 bg-sky-100 hover:bg-sky-200 inline-flex items-center justify-center px-3 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm "
+                    <a href="#" class="text-zinc-700 hover:text-zinc-700 text-sm font-medium">Home</a>
+                    <a class="text-zinc-800 bg-zinc-100 hover:bg-zinc-200 inline-flex items-center justify-center px-3 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm "
                         href="{% url 'login' %}">Login
                     </a>
                 </div>
