--- a/templates/components/guestLayout.html
+++ b/templates/components/guestLayout.html
@@ -7,7 +7,7 @@
     {% load static %}
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-50 min-h-screen flex flex-col">
+<body class="min-h-screen flex flex-col">
     <!-- Navigation Bar -->
     {% include 'components/nav.html' %}
 
