--- a/templates/components/nav.html
+++ b/templates/components/nav.html
@@ -5,20 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        darkest: '#2a3e30',
-                        mid: '#6e948a',
-                        light: '#97ada7',
-                        white: '#ffffff',
-                    },
-                },
-            },
-        };
-    </script>
 </head>
 <body>
     <div class="fixed top-0 left-0 w-full z-50 bg-white border-b backdrop-blur-lg bg-opacity-80">
@@ -30,7 +16,7 @@
                     </a>
                 </div>
                 <div class="flex-shrink-0 flex px-2 py-3 items-center space-x-8">
-                    <a href="#" class="text-zinc-700 hover:text-zinc-700 text-sm font-medium">Home</a>
+                    <a href="{% url 'landingPage'%}" class="text-zinc-700 hover:text-zinc-700 text-sm font-medium">Home</a>
                     <a class="text-zinc-800 bg-zinc-100 hover:bg-zinc-200 inline-flex items-center justify-center px-3 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm "
                         href="{% url 'login' %}">Login
                     </a>
