--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -105,7 +105,7 @@
                         {% endif %}
                     </td>
                     <td class="px-2 py-2 border">{{ user.date_joined }}</td>
-                    <td class="px-2 py-2 border">
+                    <td class="px-2 py-2 border text-center">
                         <a href="{% url 'user_detail' user.id %}" class="bg-blue-600 text-white px-2 py-0.5 rounded hover:bg-blue-700">
                             View
                         </a>
